css: fix bug shift of ships on fade

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,18 +215,28 @@ body {
 #quiz-outer {
     width: 90%;
     margin:auto;
-    height: 90vh;
+    height: 500px;
     display: flex;
     align-items: center;
-    justify-content:space-around;
+    justify-content:space-evenly;
     --hue: var(--hue-neutral);
     background-color: rgba(var(--hue),.5);
     border-radius: 20px;
+    padding:20px;
 }
 
+
 .ship-container {
-    display: flex;
+    display:none;
     align-items: center;
+    width:33%;
+    height: 800px;
+}
+
+@media (min-width:769px){
+    .ship-container {
+        display: flex;
+    }
 }
 
 .ship-container img {
@@ -248,7 +258,7 @@ body {
 
 .quiz-container {
     width: 400px;
-    max-width: 80%;
+    max-width: 95%;
     background-color: rgb(194, 179, 178);
     border-radius: 20px;
     padding: 20px;
@@ -262,13 +272,32 @@ body {
 
 }
 
+.your-score-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content:right;
+}
+
+.your-score-inner>p {
+    text-align: left;
+}
+
+.enemy-score-inner {
+    display: flex;
+    flex-direction: column;
+    align-items:self-end;
+}
+
+.enemy-score-inner>p {
+    text-align:right;
+}
+
 .shields-result {
     height: 50px;
     width: 50px;
     line-height: 50px;
     text-align: center;
     border-radius:50%;
-    margin:auto;
     --hue: var(--hue-correct);
     background-color:rgb(var(--hue));
 }
@@ -315,8 +344,6 @@ body {
     }
 }
 
-
-
 /*Button Styling*/
 
 .btn-quiz {
@@ -346,8 +373,3 @@ body {
 .hidden {
     display:none;
 }
-
-
-
-/* Webkit Test */
-
